hw4/deploy/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: otus-hw4-app
  namespace: otus-hw4
spec:
  host: otus-hw4-app
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: otus-hw4-app-gateway
  namespace: otus-hw4
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - arch.istio.homework
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: otus-hw4-virt-service
  namespace: otus-hw4
spec:
  hosts:
    - arch.istio.homework
  gateways:
    - otus-hw4-app-gateway
  http:
    - match:
        - uri:
            prefix: /app
      route:
        - destination:
            host: otus-hw4-app
            port:
              number: 8080
            subset: v1
          weight: 50
        - destination:
            host: otus-hw4-app
            port:
              number: 8080
            subset: v2
          weight: 50
